# proto-engine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert  light.frag  light.vert  skybox.frag  skybox.vert
include/: arrlist.h  camera.h  global.h  input.h  light.h  memutils.h  model.h  model_fmt.h  model_mgr.h  object.h  setup.h  shader.h  skybox.h  state.h
src/: camera.c  input.c  lib_impls.c  light.c  main.c  model.c  model_mgr.c  object.c  setup.c  shader.c  skybox.c  state.c
src/engine/: camera.c  main.c  model.c
src/mesh_loader/: main.c
